...
    android:background="@color/white"
    android:clipChildren="false"
    android:paddingTop="25dp"
    android:clipToPadding="false"
    tools:context="main.MainPatientActivity">
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:onClick="scanbt"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:translationY="-15dp"
            android:translationZ="30dp">
            <ImageView
                android:id="@+id/scanButton"
                android:layout_width="81dp"
                android:layout_height="67dp"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:background="@drawable/scan_button_background"
                android:src="@drawable/contactless"
...
