<resources>
    <string name="app_name">D-Clinic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="emaildoctor">Email Doctor</string>
    <string name="phone">Phone Number</string>
    <string name="phoneplaceholder">Input Your Phone Number</string>
    <string name="sign_up_text"><u>Sign Up here</u></string>
    <string name="str">STR</string>
    <string name="logintext"><u>Login here</u></string>
    <string name="home">Home</string>
    <string name="kosong" />
    <string name="history">History</string>
    <string name="faq">Faq</string>
    <string name="chat">Chat</string>
    <string name="default_web_client_id">652599682808-b41jbc9uolpnssgmptijkbufgbo1vvrd.apps.googleusercontent.com</string>
    <string name="request">Request</string>
    <string name="tab_date">Date</string>
    <string name="tab_week">Week</string>
    <string name="tab_month">Month</string>
    <string name="tab_year">Year</string>
    <string name="inbox">Inbox</string>
    <string name="search">Search</string>
</resources>