...
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:tabMode="fixed"
            android:background="@color/white"
            app:tabGravity="fill"
...
                android:layout_height="wrap_content"
                android:text="Week" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Month" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Year" />
        </com.google.android.material.tabs.TabLayout>
...
